syntax = "proto3";

option go_package = "api/";
package userproto;
service CustomerService{
    rpc CreateUser(Customer)    returns (resCustomer);
    rpc GetUser (CustomerId)    returns (resCustomer);
}

message resCustomer {
    string name=1;
    string surname=2;
    string email=3;
};
message Customer{
    string name=1;
    string surname=2;
    string email=3;
    string password=4;
}

message CustomerId{
    string Id =1;
}

